examples/test/testpolicy17180.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17180
  namespace: namespace16
spec:
  podSelector:
    matchLabels:
      key6: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value14
          key48: value14
          key43: value10
      podSelector:
        matchLabels:
          key35: value18
          key26: value14
          key0: value48
